GeglNode: Emit invalidated only after setting the passthrough

https://bugzilla.gnome.org/show_bug.cgi?id=777487